refactor(game): 部分代码优化